ex09 (1 - 9) (not finished)